# acjgitbis2

./: README.md  skin.py
data/: skin.xml
data/skin_default/: Makefile.am
data/skin_default/buttons/: Makefile.am
data/skin_default/icons/: Makefile.am
data/skin_default/menu/: Makefile.am
lib/python/Screens/: About.py  Standby.py
