SUBDIRS = menu icons buttons spinner LCDIcons

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = \
	bs_b.png \
	bs_bl.png \
	bs_br.png \
	bs_l.png \
	bs_r.png \
	bs_t.png \
	bs_tl.png \
	bs_tr.png \
	end.png \
	endback.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	h-white.png \
	ico_crypt_off.png \
	ico_crypt_on.png \
	ico_dolby_off.png \
	ico_dolby_on.png \
	ico_format_off.png \
	ico_format_on.png \
	ico_hd_off.png \
	ico_hd_on.png \
	ico_mp_forward.png \
	ico_mp_pause.png \
	ico_mp_play.png \
	ico_mp_rewind.png \
	ico_txt_off.png \
	ico_txt_on.png \
	mp_buttons.png \
	mpslider.png \
	picon_default.png \
	pointer.png \
	prev.png \
	progress.png \
	progress_big.png \
	slider.png \
	overscan1280x720.png \
	overscan1920x1080.png \
	slider_back.png \
	testscreen.png \
	timeline.png \
	timeline-now.png \
	vkey_icon_blue.png \
	vol.png \
	v-white.png \
	testscreen.png
